# ChangeLog for gnome-extra/nemo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nemo-2.2.1-r1 (18 May 2014)

  18 May 2014; Daniel Schömer <daniel.schoemer@gmx.net> +nemo-2.2.1-r1.ebuild:
  Added dependency to dev-python/polib

*nemo-2.2.1 (07 May 2014)
*nemo-2.2.0 (07 May 2014)

  07 May 2014; root <root@storsten.schoemer.local> +nemo-2.2.0.ebuild,
  +nemo-2.2.1.ebuild:
  Added 2.2.0 and 2.2.1

*nemo-2.0.8 (01 Mar 2014)

  01 Mar 2014; root <root@storsten.schoemer.local> +nemo-2.0.8.ebuild:
  2.0.8 based on github tag

*nemo-2.0.6 (02 Feb 2014)

  02 Feb 2014; root <root@storsten.schoemer.local>
  +files/0001-Use-gksu-instead-of-pkexec-until-systemd-glib-whatev.patch,
  +metadata.xml, +nemo-2.0.6.ebuild:
  2.0.6 from sabayon
