@@ -1,9 +1,4 @@
-AUX 0001-Use-gksu-instead-of-pkexec-until-systemd-glib-whatev.patch 1700 SHA256 8e4fc2bedc2884d17a314f244ab14801412ba7bce3837e790dff3120f2f873bb SHA512 855c4408c64876cdeeb61e0a7a308b169ccaabf5b94ba4699f676f10fe6132206b581f5aaf91ef8176720c6249a200de9b8ccb7c9dafabde94ca1718ec47272b WHIRLPOOL 29f9e55dc72644b23cb5975e41db8627bdde0d30688928241c1133d5c39b1a72b762f24b0fb31a0b9f4ea514111cb35af9db42996ab786e1cf3c16a86d4b8273
-DIST nemo-2.0.6.tar.gz 1341905 SHA256 4d00d805faad653de3f095d3352c76dd10315df1154a09dce6bd0ca4002cdcf8 SHA512 e92410e9c86ac9575b146dee5592c065d92666395f2122db4679d2a9d3d556719e35ccdec222288903b0305dac8d5ef246142644730646159939d4b7fa0e9721 WHIRLPOOL 2e294eb5a094787b853d512ce858b5f9873290087b9c867ae4d5eba1bcd85df2332160251f775959378634cb3e762c87b5d3ac258916046b64f9b4014bcd367e
-EBUILD nemo-2.0.6.ebuild 2399 SHA256 01aa36e7e29e40273e86bef6591c8f2df7561f74c57a13f6dfe91233681f1c25 SHA512 b31c2ada4c356e8b8a0fc1e029a7b700e40f3040cc52e2aad4e26c780fab6339be600b98821648a23927fb25f8dbca4ca08b0c0b4267528df4c71b4a48b278df WHIRLPOOL 532fbeaf6488a53575c100bfa5956b5c0dc35f5b1cb8199f5e6f1d6d6618562ccdb8442ca3b57fedeaf5d8fa5f4da4c83dfa6bd4186ef2c090496dac58bfa289
-EBUILD nemo-2.0.8.ebuild 2377 SHA256 56fd61116b4299b9a703208f763f05fc81b2926c31e0bb760d614fe176948bfd SHA512 99dbc622ef86698f11829687f6da401d28487497f028360a9e018967614851808680a3803511991a88dc61663d2e04407341c3c879eeaf2af69f842c0d2d393c WHIRLPOOL 329d43ba2d14e3ea8c4768922b4627fad29a32dbea799dc270a13b585edde5a6801d98467aed56fc130dfb90b0b6f6bfccb483f3aef21782ff7d540e70f2c4e6
-EBUILD nemo-2.2.0.ebuild 2395 SHA256 7eae60c258430f6b32d22afb9040cb93e8b74aa97575c01a785ba08171b02faf SHA512 9071c8f444a33e8da42a4a8c5d315a3eb2f798b23dc473c9016d224863a4512737a37950f5a2693b4fda693bfae78d40b7ed8ba0b2b12473ab615b411bd3eb4d WHIRLPOOL 9fa2612e08d925a6c635ca9d7ccb1fce38d363bed98fb7eca623e045981d44d35e3722642bdc4357811e12b0eb8973c016fcf3ba1bd7645171f7fe0cfc9a6253
-EBUILD nemo-2.2.1-r1.ebuild 2395 SHA256 f44d241286e55d21936e2c0751a9e0eea1d5b3c213f43d026f5209809bdf5ad4 SHA512 cd4568251d98ed4e124c6bc302c263cc79788a0e0283646defcb9c02420426356dd2fa6d2aba2ec3b819c52af0563145a0189a1dd19e2659a58b28c567ab34fe WHIRLPOOL 0387a5ece2cf12af4c1762ccf415101d552ded0e44dc7a73355ba8cbaaeedcdf4888dcbba51be85623d161fcc487583aa2d236189d7673b1bdcb3e05ff817f7b
-EBUILD nemo-2.2.1.ebuild 2377 SHA256 56fd61116b4299b9a703208f763f05fc81b2926c31e0bb760d614fe176948bfd SHA512 99dbc622ef86698f11829687f6da401d28487497f028360a9e018967614851808680a3803511991a88dc61663d2e04407341c3c879eeaf2af69f842c0d2d393c WHIRLPOOL 329d43ba2d14e3ea8c4768922b4627fad29a32dbea799dc270a13b585edde5a6801d98467aed56fc130dfb90b0b6f6bfccb483f3aef21782ff7d540e70f2c4e6
-MISC ChangeLog 776 SHA256 66be201ab8b9ed48f4710ea9ee6925586ebb24e00c1594bcd1864b46bfa2fdad SHA512 d0b78ae8d7a69ca682b0754175f0c0468bfeac1065c48bbb576bd666869fdedbc17b13b8dedfa88e7a9cfb76dcc9e8359a3b0b7c9adada26fdf5e55f94c505ed WHIRLPOOL e0b634a4b8110aae6a4befb2f8ab26463606445a43fcdde16b623315349e2b00614ecc42fbac288d1f7576178fd1d63d798a8ed6ed5a8e831452bb078baf7bf6
+DIST nemo-2.2.3.tar.gz 1341842 SHA256 21fb6bfb0c2c4764f601fe72a0588f67723d29a6a2907c17cf74fae7b801bc26 SHA512 9034ea59fa2e133e512a907872a3d6b71efe20c8966c712c41e04fd4e728eaf305b8817e8484992f36c6ba4f522d79ba1b3e4b6c8349dc8998f5fa2763277730 WHIRLPOOL bea3b69dc1462fa0c1315f759af42d7ffd69a2c9d33189ab847868224af9886c889ade44f53c7e5f733782e12c6329d4be4a3e2f89dde477f809c33cb6697754
+EBUILD nemo-2.2.3.ebuild 2510 SHA256 9c247f4f9af63862d7bb225dd8d3c33d010e1d34a1a49f78320acfd3a902167e SHA512 6f92bf5cb5784dd2b9f844e9de6f2e1e42da858608608c99c8a1f980cff7271d715c427418a3fe4d29b4926854becc8744247444edc08177ab69fcc453c0bbbf WHIRLPOOL 49c9df6acedb98907772cab213bc7cc3f1c629a16ab646957640da12b7dd021854d65c1105bdde687efc2beddb45dfbcd4c227e4b194f78056fe91e5fcbb3b77
+MISC ChangeLog 1092 SHA256 de941006ea364ea770d379ba014047a47d55905833633c066aadc9aebd9c2a1a SHA512 67c0f103bf6f680a91b8cf87e8939aa3cba57fa4d658823908645f2dae2d1c09f1ca8b4acc842b76ba5753d919db6674ecb6116998bf860713d8a9126e96c252 WHIRLPOOL 312da033dff086a3dc6fa487a913448e8d2455703ecc199ad04bee8fa21a482f6cc0561996b27a5adbd7646392d80cd039aa3d98deb8041896b1282d8dadb8c9
 MISC metadata.xml 451 SHA256 e24f1aec9034d15471ab25abd1881318c4625a269998c4aff1560d6babadec79 SHA512 240dfebf11687d09e0ee330c4219c81a1c4e2091193b230972a7ed5441ea7dc2a868800da06c4aeca74880a76622768d8ebdbf2d59e020eb1390ab918775ecbb WHIRLPOOL 336a3e9cc458ad791085c16524853ceab01beb302931452c2af4be5e1822d45131546fdf7d257afb74d72d8595a741af4944f7d84ea3f115f6c9d39f496ca90e
